--- a/ProyectoUnicineIsaac/UnicineTest/UnicineTest.csproj
+++ b/ProyectoUnicineIsaac/UnicineTest/UnicineTest.csproj
@@ -69,7 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestUnicine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
